--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 </header>
 
 <nav class="nav-container">
-    <div> <h3> <a class=nav href="north.html" target="_blank">North</a> </h3> </div>
-    <div> <h3> <a class=nav href="south.html" target="_blank">South</a> </h3> </div>
-    <div> <h3> <a class=nav href="midtown.html" target="_blank">Midtown</a> </h3> </div>
-    <div> <h3> <a class=nav href="west.html" target="_blank">West</a> </h3> </div>
-    <div> <h3> <a class=nav href="east.html" target="_blank">East</a> </h3> </div>
+    <div> <h3> <a class=nav href="north.html">North</a> </h3> </div>
+    <div> <h3> <a class=nav href="south.html">South</a> </h3> </div>
+    <div> <h3> <a class=nav href="midtown.html">Midtown</a> </h3> </div>
+    <div> <h3> <a class=nav href="west.html">West</a> </h3> </div>
+    <div> <h3> <a class=nav href="east.html">East</a> </h3> </div>
 </nav>
 
 
