--- a/north.html
+++ b/north.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Study Spots - Home - Area</title>
+    <title>Study Spots - Home - North</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -26,7 +26,7 @@
         <div class="character-left">
             <img src="images/character-blue4.png" alt="character walking, looking to the right">
         </div>
-        <h2>Area</h2>
+        <h2>North</h2>
         <div class="character-right">
             <img src="images/character-blue2.png" alt="character sitting and working on laptop">
         </div>
@@ -35,11 +35,11 @@
 </header>
 
 <nav class="nav-container">
-    <div> <h3> <a class=nav href="north.html" target="_blank">North</a> </h3> </div>
-    <div> <h3> <a class=nav href="south.html" target="_blank">South</a> </h3> </div>
-    <div> <h3> <a class=nav href="midtown.html" target="_blank">Midtown</a> </h3> </div>
-    <div> <h3> <a class=nav href="west.html" target="_blank">West</a> </h3> </div>
-    <div> <h3> <a class=nav href="east.html" target="_blank">East</a> </h3> </div>
+    <div> <h3> <a class=nav href="north.html">North</a> </h3> </div>
+    <div> <h3> <a class=nav href="south.html">South</a> </h3> </div>
+    <div> <h3> <a class=nav href="midtown.html">Midtown</a> </h3> </div>
+    <div> <h3> <a class=nav href="west.html">West</a> </h3> </div>
+    <div> <h3> <a class=nav href="east.html">East</a> </h3> </div>
 </nav>
 
 
@@ -51,98 +51,98 @@
 
         <section>
             <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4>Location 1</h4>
-            <h4>Address</h4>
+            <h4>Toronto Public Library (North York Centre)</h4>
+            <h4>5120 Yonge Street</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">9AM–8:30PM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">9AM–5PM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">1:30PM–5PM</span> </p>
             <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
         <section>
             <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4>Location 2</h4>
-            <h4>Address</h4>
+            <h4>Coffee Lunar</h4>
+            <h4>6040 Yonge Street</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">9AM–7PM</span> </p>
             <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 3</h4>
-            <h4>Address</h4>
+            <h4>Cafe Kray</h4>
+            <h4>4850 Yonge Street (2nd floor)</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
             <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">limited quantity</span> </p>
             </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 4</h4>
-            <h4>Address</h4>
+            <h4>A Corner Cafe</h4>
+            <h4>5193 Yonge Street</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">9AM–1AM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">9AM–1AM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">9AM–11PM</span> </p>
             <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 5</h4>
-            <h4>Address</h4>
+            <h4>Cafe Inside</h4>
+            <h4>23 Spring Garden Avenue</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">9AM–9PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">9AM–9PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">9AM–9PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">9AM–9PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">9AM–9PM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
             <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">limited quantity</span> </p>
         </section>
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4>Location 6</h4>
-            <h4>Address</h4>
+            <h4>Dont Yell At Me</h4>
+            <h4>5336 Yonge Street</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">Noon-Midnight</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">Noon-Midnight</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">Noon–10PM</span> </p>
             <br>
-            <p>Charging Outlet: __</p>
+            <p>Charging Outlets: <span style="text-transform: uppercase;">available</span> </p>
         </section>
 
 
