--- a/south.html
+++ b/south.html
@@ -24,11 +24,11 @@
 
     <div class="header-container">
         <div class="character-left">
-            <img src="images/character-blue5.png" alt="character walking, looking to the right" style="transform: scaleX(-1);">
+            <img src="images/character-blue5.png" alt="character standing with backpack, looking to the right" style="transform: scaleX(-1);">
         </div>
         <h2>South</h2>
         <div class="character-right">
-            <img src="images/character-blue3.png" alt="character sitting and working on laptop">
+            <img src="images/character-blue3.png" alt="character sitting and working with paper">
         </div>
     </div>
 
@@ -118,13 +118,13 @@
             <h4>Rooms</h4>
             <h4>17 Baldwin Street</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">8AM–6PM</span> </p>
             <br>
             <p>Charging Outlet: <span style="text-transform: uppercase;">unavailable</span> </p>
         </section>
@@ -134,13 +134,13 @@
             <h4>Columbus Café and Co Adélaide</h4>
             <h4>283 Adelaide Street W</h4>
             <br>
-            <p>Monday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Tuesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Wednesday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Thursday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Friday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Saturday: <span style="font-family: Lato Bold">Hours</span> </p>
-            <p>Sunday: <span style="font-family: Lato Bold">Hours</span> </p>
+            <p>Monday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>Tuesday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>Wednesday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>Thursday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>Friday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>Saturday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
+            <p>Sunday: <span style="font-family: Lato Bold">6AM–9PM</span> </p>
             <br>
             <p>Charging Outlet: <span style="text-transform: uppercase;">unavailable</span> </p>
         </section>
