--- a/east.html
+++ b/east.html
@@ -178,7 +178,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Forest Cafe </a> </h4>
+            <h4> <a class="location-link" href="https://forestcafetoronto.com/" target="_blank"> Forest Cafe </a> </h4>
             <br>
             <p>56 Forest Manor Road Unit 5</p>
             <br>
@@ -218,7 +218,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Cafe Zuzu </a> </h4>
+            <h4> <a class="location-link" href="https://cafezuzu.com/contact?" target="_blank"> Cafe Zuzu </a> </h4>
             <br>
             <p>555 Dundas Street E</p>
             <br>
@@ -258,7 +258,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Bevy </a> </h4>
+            <h4> <a class="location-link" href="https://www.bevy.space/" target="_blank"> Bevy </a> </h4>
             <br>
             <p>738 Dundas Street E</p>
             <br>
