--- a/west.html
+++ b/west.html
@@ -56,7 +56,7 @@
 
         <section>
             <img src="images/library-icon.png" alt="illustrated book icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Toronto Public Library (Parkdale) </a> </h4>
+            <h4> <a class="location-link" href="https://www.torontopubliclibrary.ca/parkdale/" target="_blank"> Toronto Public Library (Parkdale) </a> </h4>
             <br>
             <p>1303 Queen Street W</p>
             <br>
@@ -98,7 +98,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Cosette Coffee </a> </h4>
+            <h4> <a class="location-link" href="https://www.instagram.com/cosette_coffee/?hl=en" target="_blank"> Cosette Coffee </a> </h4>
             <br>
             <p>1715 Bloor Street W</p>
             <br>
@@ -138,7 +138,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Typist Studios & Coffee </a> </h4>
+            <h4> <a class="location-link" href="https://www.instagram.com/typiststudios/?hl=en" target="_blank"> Typist Studios & Coffee </a> </h4>
             <br>
             <p>390 Dupont Street</p>
             <br>
@@ -178,7 +178,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Rois Cream </a> </h4>
+            <h4> <a class="location-link" href="https://roiscream.square.site/" target="_blank"> Rois Cream </a> </h4>
             <br>
             <p>382 Keele Street</p>
             <br>
@@ -218,7 +218,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> Osprey Cafe </a> </h4>
+            <h4> <a class="location-link" href="https://www.instagram.com/osprey.to/" target="_blank"> Osprey Cafe </a> </h4>
             <br>
             <p>1714 Queen Street W</p>
             <br>
@@ -258,7 +258,7 @@
 
         <section>
             <img src="images/coffee-icon.png" alt="illustrated coffee icon">
-            <h4> <a class="location-link" href="link" target="_blank"> AM Coffee Studio </a> </h4>
+            <h4> <a class="location-link" href="https://amcoffeestudio.com/" target="_blank"> AM Coffee Studio </a> </h4>
             <br>
             <p>2233 Dundas Street W</p>
             <br>
