--- a/east.html
+++ b/east.html
@@ -27,13 +27,13 @@
     </div> 
     <div class="areas-page-label-container">
         <div class="character-left">
-            <img src="images/character-blue4.png" alt="character walking, looking to the right">
+            <img src="images/character-blue9.png" alt="character sitting and reading a book">
         </div>
         <div class="areas-page-label"> 
             <h2>East</h2> 
         </div>
         <div class="character-right">
-            <img src="images/character-blue2.png" alt="character sitting and working on laptop">
+            <img src="images/character-blue6.png" style="transform: scaleX(-1);" alt="character working on laptop">
         </div>
     </div>
 
