--- a/midtown.html
+++ b/midtown.html
@@ -27,13 +27,13 @@
     </div> 
     <div class="areas-page-label-container">
         <div class="character-left">
-            <img src="images/character-blue4.png" alt="character walking, looking to the right">
+            <img src="images/character-blue7.png" style="transform: scaleX(-1);" alt="character holding a drink and a bag">
         </div>
         <div class="areas-page-label"> 
             <h2>Midtown</h2> 
         </div>
         <div class="character-right">
-            <img src="images/character-blue2.png" alt="character sitting and working on laptop">
+            <img src="images/character-blue3.png" style="transform: scaleX(-1);" alt="character sitting and working on paper">
         </div>
     </div>
 
