--- a/south.html
+++ b/south.html
@@ -27,13 +27,13 @@
     </div> 
     <div class="areas-page-label-container">
         <div class="character-left">
-            <img src="images/character-blue5.png" style="transform: scaleX(-1);" alt="character wearing backpack, looking to the right">
+            <img src="images/character-blue5.png" style="transform: scaleX(-1);" alt="character wearing backpack, looking up to the right">
         </div>
         <div class="areas-page-label"> 
             <h2>South</h2> 
         </div>
         <div class="character-right">
-            <img src="images/character-blue3.png" alt="character sitting and working with paper">
+            <img src="images/character-blue10.png" alt="character working on tablet">
         </div>
     </div>
 
