--- a/west.html
+++ b/west.html
@@ -27,13 +27,13 @@
     </div> 
     <div class="areas-page-label-container">
         <div class="character-left">
-            <img src="images/character-blue4.png" alt="character walking, looking to the right">
+            <img src="images/character-blue1.png" alt="character sitting with a drink and working on laptop">
         </div>
         <div class="areas-page-label"> 
             <h2>West</h2> 
         </div>
         <div class="character-right">
-            <img src="images/character-blue2.png" alt="character sitting and working on laptop">
+            <img src="images/character-blue8.png" style="transform: scaleX(-1);" alt="character writing on a board">
         </div>
     </div>
 
